--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,15 @@
 
 <ul id="todo_list">
     {{range . }}
-        <li id="{{ .ID }}">{{ .ID }} - {{ .Task }} - {{ .Status }}</li>
+        <li id="{{ .ID }}">
+            {{ .ID }} - {{ .Task }} - 
+            <a href="#" class="status_update" 
+                id="li_{{ .ID }}" 
+                data-status="{{ .Status}}"
+                data-id="{{ .ID}}">
+                {{ .Status }}
+            </a>
+        </li>
     {{ end }}
 </ul>
 
@@ -22,6 +30,7 @@
 <script type="text/javascript">
     const $form = document.getElementById("add_todo_form");
     const $list = document.getElementById("todo_list");
+    const $el = document.querySelectorAll(".status_update");
    
     const render = (data) => {
         console.log(data); 
@@ -47,8 +56,29 @@
         })
         .then(response => response.json())
         .then(json => render(json))
-        .catch(error => console.error(error))
+        .catch(error => console.error(error));
 
+        return false;
+    });
+
+    Array.from($el).forEach(link => {
+        link.addEventListener("click", function (e) {
+            e.preventDefault();
+            console.log(e.target.id);
+
+            let $id = parseInt(e.target.getAttribute('data-id'));
+            let $status = e.target.getAttribute('data-status') == 'false';
+
+            fetch('/status_update', {
+                method: 'POST',
+                body: JSON.stringify({id:$id, status:$status}),            
+            })
+            .then(response => response.json())
+            .then(json => { console.log(json) })
+            .catch(error => console.error(error));
+
+            return false;
+        });
     });
 </script>
 </body>
